// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectNetworkStep > should render 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            data-testid="icon-SelectNetworkLightGreen"
          >
            <div
              style="height: 24px; width: 24px;"
            >
              <svg
                fill="none"
                style="height: 100%; width: 100%;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14 1.50781C9.02944 1.50781 5 5.53725 5 10.5078L9.5 10.5C9.5 10.8333 9.6 11.8 10 13C10.5 14.5 11 15.2538 13 15.2538H21.6484C22.5052 13.876 23 12.2497 23 10.5078C23 5.53725 18.9706 1.50781 14 1.50781Z"
                  fill="#E2F0E6"
                />
                <path
                  d="M5 10.5078C5 5.53725 9.02944 1.50781 14 1.50781C18.9706 1.50781 23 5.53725 23 10.5078C23 13.6332 21.4069 16.3865 18.9884 18"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M11.7969 1.78125C10.5969 3.58125 9.79688 6.90439 9.79688 10.5044C9.79688 11.2643 9.83252 12.0125 9.90006 12.7369"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M5 10.5078H23"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M12.5 15.2031H21.6816"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M6.45312 5.60938H21.5539"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M16.2031 1.78125C17.4031 3.58125 18.1031 6.81041 18.1031 10.5104C18.1031 12.9777 17.7919 15.2356 17.2286 17"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M9.25 16.2188H1.75"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M4.16667 18.6146L1.75 16.1979L4.16667 13.7812"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M8.75 20.1797L16.25 20.1797"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M13.8333 17.7839L16.25 20.2005L13.8333 22.6172"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            title
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 mt-4"
    >
      <div
        data-testid="SelectNetwork"
      />
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`SelectNetworkStep > should render with test networks 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            data-testid="icon-SelectNetworkLightGreen"
          >
            <div
              style="height: 24px; width: 24px;"
            >
              <svg
                fill="none"
                style="height: 100%; width: 100%;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14 1.50781C9.02944 1.50781 5 5.53725 5 10.5078L9.5 10.5C9.5 10.8333 9.6 11.8 10 13C10.5 14.5 11 15.2538 13 15.2538H21.6484C22.5052 13.876 23 12.2497 23 10.5078C23 5.53725 18.9706 1.50781 14 1.50781Z"
                  fill="#E2F0E6"
                />
                <path
                  d="M5 10.5078C5 5.53725 9.02944 1.50781 14 1.50781C18.9706 1.50781 23 5.53725 23 10.5078C23 13.6332 21.4069 16.3865 18.9884 18"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M11.7969 1.78125C10.5969 3.58125 9.79688 6.90439 9.79688 10.5044C9.79688 11.2643 9.83252 12.0125 9.90006 12.7369"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M5 10.5078H23"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M12.5 15.2031H21.6816"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M6.45312 5.60938H21.5539"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M16.2031 1.78125C17.4031 3.58125 18.1031 6.81041 18.1031 10.5104C18.1031 12.9777 17.7919 15.2356 17.2286 17"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M9.25 16.2188H1.75"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M4.16667 18.6146L1.75 16.1979L4.16667 13.7812"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M8.75 20.1797L16.25 20.1797"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M13.8333 17.7839L16.25 20.2005L13.8333 22.6172"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            title
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 mt-4"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div
        data-testid="SelectNetwork"
      >
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 sr-only"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-0-menu"
              role="combobox"
            >
              <div>
                <label
                  for="downshift-0-input"
                  id="downshift-0-label"
                />
                <div
                  class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-0-menu"
                      aria-labelledby="downshift-0-label"
                      autocomplete="off"
                      class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default"
                      data-testid="SelectDropdown__input"
                      id="downshift-0-input"
                      name="network"
                      placeholder="Select option"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="absolute inset-0 block cursor-pointer md:hidden"
                          />
                          <div
                            class="transition-transform text-theme-secondary-500"
                          >
                            <div
                              style="height: 10px; width: 10px;"
                            >
                              <svg
                                id="chevron-down-small"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 10 10"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <path
                                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="downshift-0-label"
                id="downshift-0-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`SelectNetworkStep > should render without test networks 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            data-testid="icon-SelectNetworkLightGreen"
          >
            <div
              style="height: 24px; width: 24px;"
            >
              <svg
                fill="none"
                style="height: 100%; width: 100%;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14 1.50781C9.02944 1.50781 5 5.53725 5 10.5078L9.5 10.5C9.5 10.8333 9.6 11.8 10 13C10.5 14.5 11 15.2538 13 15.2538H21.6484C22.5052 13.876 23 12.2497 23 10.5078C23 5.53725 18.9706 1.50781 14 1.50781Z"
                  fill="#E2F0E6"
                />
                <path
                  d="M5 10.5078C5 5.53725 9.02944 1.50781 14 1.50781C18.9706 1.50781 23 5.53725 23 10.5078C23 13.6332 21.4069 16.3865 18.9884 18"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M11.7969 1.78125C10.5969 3.58125 9.79688 6.90439 9.79688 10.5044C9.79688 11.2643 9.83252 12.0125 9.90006 12.7369"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M5 10.5078H23"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M12.5 15.2031H21.6816"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M6.45312 5.60938H21.5539"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M16.2031 1.78125C17.4031 3.58125 18.1031 6.81041 18.1031 10.5104C18.1031 12.9777 17.7919 15.2356 17.2286 17"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M9.25 16.2188H1.75"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M4.16667 18.6146L1.75 16.1979L4.16667 13.7812"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M8.75 20.1797L16.25 20.1797"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M13.8333 17.7839L16.25 20.2005L13.8333 22.6172"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
          <h1
            class="mb-0 text-2xl leading-[29px]"
            data-testid="header__title"
          >
            title
          </h1>
        </div>
        <div
          class="flex items-center leading-5 text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 mt-4"
    >
      <div
        data-testid="SelectNetwork"
      />
    </fieldset>
  </section>
</DocumentFragment>
`;
